# learn-pytorch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
learn_pytorch/: __main__.py
notebooks/: first_step_with_pytorch.ipynb  test.ipynb
tests/: test_learn_pytorch.py
