[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
torch = "^1.11.0"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
torchvision = "^0.12.0"
torchtext = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
